app-in-apps/yaml/wger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wger-ingress
  namespace: wger
  labels:
    app: wger
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: wger.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-wger-http
                port:
                  number: 8000
  tls:
    - hosts:
        - wger.nexus-core.dev
      secretName: wger-ingress-secret
